--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
   },
   "dependencies": {
     "@prismicio/client": "^5.1.1",
+    "@types/react": "^18.0.1",
     "aos": "^2.3.4",
     "axios": "^0.21.4",
     "googleapis": "^85.0.0",
-    "next": "10.2.0",
+    "next": "^12.3.0",
     "next-images": "^1.8.4",
     "nextjs-progressbar": "^0.0.11",
     "nodemailer": "^6.7.8",
     "polished": "^4.2.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "^15.14.9",
-    "@types/react": "^18.0.20",
+    "@types/react": "^18.0.1",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
