--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/node": "^15.14.9",
     "@types/react": "17.0.14",
     "@types/react-dom": "17.0.14",
